--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
    "description": "Awesome project developed with TypeORM.",
    "type": "commonjs",
    "devDependencies": {
+      "@types/node": "^16.18.39",
       "ts-node": "10.7.0",
-      "@types/node": "^16.11.10",
       "typescript": "4.5.2"
    },
    "dependencies": {
-      "typeorm": "0.3.17",
-      "reflect-metadata": "^0.1.13",
-      "pg": "^8.4.0",
+      "body-parser": "^1.19.1",
       "express": "^4.17.2",
-      "body-parser": "^1.19.1"
+      "pg": "^8.4.0",
+      "reflect-metadata": "^0.1.13",
+      "typeorm": "0.3.17"
    },
    "scripts": {
       "start": "ts-node src/index.ts",
