--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
    "description": "Awesome project developed with TypeORM.",
    "type": "commonjs",
    "devDependencies": {
+      "@types/body-parser": "^1.19.2",
+      "@types/express": "^4.17.17",
       "@types/node": "^16.18.39",
       "ts-node": "10.7.0",
       "typescript": "4.5.2"
