--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
    "devDependencies": {
       "@types/body-parser": "^1.19.2",
       "@types/express": "^4.17.17",
+      "@types/morgan": "^1.9.4",
       "@types/node": "^16.18.39",
       "ts-node": "10.7.0",
       "typescript": "4.5.2"
@@ -13,6 +14,7 @@
    "dependencies": {
       "body-parser": "^1.19.1",
       "express": "^4.17.2",
+      "morgan": "^1.10.0",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.17"
