--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
   "scripts": {
     "start": "ts-node src/index.ts",
     "typeorm": "typeorm-ts-node-commonjs",
-    "dev": "nodemon "
+    "dev": "nodemon -w *.ts -w .env src/index.ts"
   }
 }
