--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.17",
+    "@types/express-validator": "^3.0.0",
     "@types/morgan": "^1.9.4",
     "@types/node": "^16.18.39",
     "nodemon": "^3.0.1",
@@ -15,6 +16,7 @@
   "dependencies": {
     "body-parser": "^1.19.1",
     "express": "^4.17.2",
+    "express-validator": "^7.0.1",
     "morgan": "^1.10.0",
     "pg": "^8.4.0",
     "reflect-metadata": "^0.1.13",
